--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "antd": "^3.19.8",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
@@ -22,11 +23,6 @@
     "@types/next": "^8.0.5",
     "@types/node": "^12.0.10",
     "@types/react": "^16.8.22",
-    "@types/react-dom": "^16.8.4",
-    "autoprefixer": "^9.6.0",
-    "cssnano": "^4.1.10",
-    "postcss-easy-import": "^3.0.0",
-    "stylelint-config-recommended": "^2.2.0",
-    "tailwindcss": "^1.0.4"
+    "@types/react-dom": "^16.8.4"
   }
 }
