--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "typeorm": "^0.2.18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.5",
